--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Overpass|Permanent+Marker" rel="stylesheet">
   </head>
   <body>
-  <!--Título permanente-->  
+  <!--Título permanente en cada interfaz-->  
     <div id="permanent" class="contain" >
       <div class="permanent" >
         <br> <br>
